Update on Overleaf.

--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -75,7 +75,7 @@
 
       span multiple paragraphs.
     },
-    bib         = example.bib,
+    bib         = my-bibliography.bib,
     %% Remove the following line to use the JVS 2018 faculty logo.
     facultyLogo = fithesis-fi,
 }
